# grammers

lib/grammers-client/: Cargo.toml
lib/grammers-client/examples/: reproduce.rs
lib/grammers-client/src/: utils.rs
lib/grammers-client/src/client/: client.rs  files.rs  net.rs  updates.rs
lib/grammers-client/src/types/: message.rs
lib/grammers-crypto/: Cargo.toml
lib/grammers-mtproto/: Cargo.toml
lib/grammers-mtproto/src/: authentication.rs
lib/grammers-mtproto/src/mtp/: encrypted.rs  mod.rs  plain.rs
lib/grammers-mtproto/src/transport/: abridged.rs  full.rs  intermediate.rs  mod.rs  obfuscated.rs
lib/grammers-mtsender/: Cargo.toml
lib/grammers-mtsender/src/: lib.rs
lib/grammers-session/: Cargo.toml
lib/grammers-session/src/message_box/: defs.rs  mod.rs
