[package]
name = "grammers-mtproto"
version = "0.7.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
An implementation of the Mobile Transport Protocol.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-mtproto"
repository = "https://github.com/Lonami/grammers"
keywords = ["mtproto", "telegram", "tl"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
aes = "0.8.4"
bytes = "1.7.1"
crc32fast = "1.4.2"
ctr = "0.9.2"
flate2 = "1.0.33"
getrandom = { version = "0.2.15", features = ["js"] }
grammers-crypto = { path = "../grammers-crypto", version = "0.7.0" }
grammers-tl-types = { path = "../grammers-tl-types", version = "0.7.0", features = ["tl-mtproto"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
log = "0.4.22"
num-bigint = "0.4.6"
sha1 = "0.10.6"

[dev-dependencies]
toml = "0.8.19"
